<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RemindererActivity!</string>
    <string name="app_name">Reminderer</string>
    <string name="hello_world">Hello world</string>
    <string name="add_new_task">Add new</string>
    <string name="submit">Submit</string>
    <string name="add_no_task">buy eggs\nbuy eggs 8pm\nbuy eggs Monday 9am\nbuy eggs July 1\nbuy eggs next Monday\nbuy eggs 8pm repeats daily</string>
    <string name="due_now">These task(s) are due now:</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="add_task">Add task...</string>
    <string name="add_sample_task">Sample tasks:</string>
    <string name="add_date">date</string>
    <string name="add_task_heading">Add task heading</string>
    <string name="add_time">time</string>

</resources>